--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "server": "json-server --watch db.json",
-    "test-h": "ng test --watch=false --browsers=ChromeHeadless"
+    "test-h": "ng test --watch=false --browsers=ChromeHeadless",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -34,9 +35,13 @@
     "@angular-devkit/build-angular": "~13.0.2",
     "@angular/cli": "~13.0.2",
     "@angular/compiler-cli": "~13.0.0",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@ngxs/devtools-plugin": "^3.7.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^7.0.4",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -45,5 +50,10 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-mocks": "^12.5.0",
     "typescript": "~4.4.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
