--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
     "server": "json-server --watch db.json",
     "test-h": "ng test --watch=false --browsers=ChromeHeadless",
     "prepare": "husky install"
@@ -44,6 +44,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^7.0.4",
     "jasmine-core": "~3.10.0",
+    "jest": "^27.3.1",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
