--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest",
     "server": "json-server --watch db.json",
-    "test-h": "ng test --watch=false --browsers=ChromeHeadless",
-    "prepare": "husky install"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --runInBand"
   },
   "private": true,
   "dependencies": {
@@ -36,21 +36,22 @@
     "@angular-devkit/build-angular": "~13.0.2",
     "@angular/cli": "~13.0.2",
     "@angular/compiler-cli": "~13.0.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@ngxs/devtools-plugin": "^3.7.2",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.10",
+    "babel-jest": "^27.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^7.0.4",
-    "jasmine-core": "~3.10.0",
     "jest": "^27.3.1",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "jest-preset-angular": "^11.0.1",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
     "ng-mocks": "^12.5.0",
+    "ts-node": "^10.4.0",
     "typescript": "~4.4.3"
   },
   "config": {
