--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@ngxs/storage-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.2",
+    "ng2-charts": "^3.0.1",
     "ngx-toastr": "^14.2.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -52,6 +54,7 @@
     "jest-preset-angular": "^11.0.1",
     "karma-coverage": "~2.0.3",
     "ng-mocks": "^12.5.0",
+    "ng2-charts-schematics": "^0.1.7",
     "ts-node": "^10.4.0",
     "typescript": "~4.4.3"
   },
