--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@ngxs/store": "^3.7.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.2",
+    "date-fns": "^2.27.0",
+    "lodash": "^4.17.21",
     "ng2-charts": "^3.0.1",
     "ngx-toastr": "^14.2.0",
     "rxjs": "~7.4.0",
@@ -46,6 +48,7 @@
     "@ngxs/devtools-plugin": "^3.7.2",
     "@testing-library/angular": "^11.0.0",
     "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.177",
     "@types/node": "^16.11.10",
     "babel-jest": "^27.3.1",
     "cz-conventional-changelog": "^3.3.0",
@@ -54,7 +57,6 @@
     "jest-preset-angular": "^11.0.1",
     "karma-coverage": "~2.0.3",
     "ng-mocks": "^12.5.0",
-    "ng2-charts-schematics": "^0.1.7",
     "ts-node": "^10.4.0",
     "typescript": "~4.4.3"
   },
