--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "json-server --watch db.json",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:ci": "jest --runInBand"
+    "test:ci": "jest --runInBand",
+    "cypress:open": "cypress open"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +30,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.2",
     "date-fns": "^2.27.0",
+    "feather-icons": "^4.28.0",
     "lodash": "^4.17.21",
     "ng2-charts": "^3.0.1",
     "ngx-toastr": "^14.2.0",
@@ -51,6 +53,7 @@
     "@types/lodash": "^4.14.177",
     "@types/node": "^16.11.10",
     "babel-jest": "^27.3.1",
+    "cypress": "^9.4.1",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
