--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "module": "es2020",
     "lib": ["es2020", "dom"],
     "strictPropertyInitialization": false,
-    "types": ["jest", "node"]
+    "types": ["jest", "cypress", "node"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
