--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress:ci": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -58,7 +59,6 @@
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "jest-preset-angular": "^11.0.1",
-    "karma-coverage": "~2.0.3",
     "ng-mocks": "^12.5.0",
     "ts-node": "^10.4.0",
     "typescript": "~4.4.3"
